# cpplox

./: .gitignore  CMakeLists.txt  README.md
examples/: closure.lox  fibonachi.lox  hello_world.lox  oop.lox
include/: lox.hpp  scanner.hpp  token.hpp  tokentype.hpp
src/: lox.cpp  main.cpp  scanner.cpp  token.cpp
